--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
-        <activity android:name=".activity.InitActivity"
+        <activity android:name="com.jiazhou.auto.note.activity.InitActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
@@ -27,7 +27,7 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name=".activity.NavActivity"
+            android:name="com.jiazhou.auto.note.activity.NavActivity"
             android:label="@string/title_activity_nav"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
